# orbittools

./: .externals  .gitattributes  .gitignore  CMakeLists.txt  README_EN.txt  changelog.txt  orbitTools.sln  readme.txt
.github/: FUNDING.yml
core/: cEci.cpp  cEci.h  cJulian.cpp  cJulian.h  cSite.cpp  cSite.h  cTLE.cpp  cTLE.h  cVector.cpp  cVector.h  coord.cpp  coord.h  core.vcxproj  coreLib.h  exceptions.h  globals.cpp  globals.h  revHistory.txt  stdafx.h
core/orbitTools/: Defines.h  SysDefine.h  SysUndefine.h
orbit/: cNoradBase.cpp  cNoradBase.h  cNoradSDP4.cpp  cNoradSDP4.h  cNoradSGP4.cpp  cNoradSGP4.h  cOrbit.cpp  cOrbit.h  cSatellite.cpp  cSatellite.h  orbit.vcxproj  orbit.vcxproj.filters  orbitLib.h  revHistory.txt  stdafx.h
